--- a/src/assets/styles/_main.scss
+++ b/src/assets/styles/_main.scss
@@ -23,6 +23,7 @@
 @import "components/carousel";
 @import "components/wishList";
 @import "components/nav-filter";
+@import "components/nav-layout-view";
 
 // Templates
 @import "templates/archive";
