--- a/src/assets/styles/templates/_archive.scss
+++ b/src/assets/styles/templates/_archive.scss
@@ -227,6 +227,9 @@
         font-size: 14px;
         font-weight: 700;
       }
+      .grid_button {
+        display: none;
+      }
       .button {
         background-color: $color__dark;
         color: $color__bright;
@@ -239,6 +242,57 @@
         padding-top: 10px;
         padding-bottom: 10px;
         margin-top: 10px;
+        &::after {
+          content: "";
+          width: 100%;
+          height: 100%;
+          background-image: url("./../images/spinning.gif");
+          z-index: 5;
+          position: absolute;
+          background-color: rgba($color__bright, 0.6);
+          top: 0;
+          left: 0;
+          background-position: center center;
+          z-index: 1000;
+          opacity: 0;
+          pointer-events: none;
+          transition: opacity 0.3s;
+        }
+        &::before {
+          content: "1 Card added";
+          color: $color__bright;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 100%;
+          height: 100%;
+          z-index: 7;
+          font-size: 16px;
+          font-weight: 500;
+          position: absolute;
+          background-color: rgba($color__dark, 0.6);
+          top: 0;
+          left: 0;
+          z-index: 1000;
+          opacity: 0;
+          pointer-events: none;
+          transition: opacity 0.5s;
+        }
+        &.add {
+          pointer-events: none;
+          &::before {
+            opacity: 1;
+            pointer-events: all;
+          }
+        }
+        &.disabled {
+          pointer-events: none;
+          cursor: not-allowed;
+          &::after {
+            opacity: 1;
+            pointer-events: all;
+          }
+        }
         &:hover {
           text-decoration: underline;
         }
@@ -273,11 +327,17 @@
           background-color: transparent;
         }
       }
-      .added_to_cart.wc-forward {
-        font-size: 13px;
-        font-weight: 500;
+      .added_to_cart {
         position: absolute;
-        bottom: 0px;
+        top: 30%;
+        padding: 8px;
+        width: 100%;
+        background: $color__dark;
+        color: $color__bright;
+        text-align: center;
+        font-weight: 500;
+        opacity: 1;
+        transition: 0.3s;
       }
     }
   }
@@ -352,6 +412,9 @@
           text-decoration: underline;
         }
       }
+      .grid_button {
+        display: none;
+      }
       .button {
         background-color: $color__dark;
         color: $color__bright;
@@ -364,12 +427,72 @@
         padding-top: 10px;
         padding-bottom: 10px;
         margin-top: 10px;
+        &::after {
+          content: "";
+          width: 100%;
+          height: 100%;
+          background-image: url("./../images/spinning.gif");
+          z-index: 5;
+          position: absolute;
+          background-color: rgba($color__bright, 0.6);
+          top: 0;
+          left: 0;
+          background-position: center center;
+          z-index: 1000;
+          opacity: 0;
+          pointer-events: none;
+          transition: opacity 0.3s;
+        }
+        &::before {
+          content: "1 Card added";
+          color: $color__bright;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 100%;
+          height: 100%;
+          z-index: 7;
+          font-size: 16px;
+          font-weight: 500;
+          position: absolute;
+          background-color: rgba($color__dark, 0.6);
+          top: 0;
+          left: 0;
+          z-index: 1000;
+          opacity: 0;
+          pointer-events: none;
+          transition: opacity 0.5s;
+        }
+        &.add {
+          pointer-events: none;
+          &::before {
+            opacity: 1;
+            pointer-events: all;
+          }
+        }
+        &.disabled {
+          pointer-events: none;
+          cursor: not-allowed;
+          &::after {
+            opacity: 1;
+            pointer-events: all;
+          }
+        }
         &:hover {
           text-decoration: underline;
         }
       }
       .added_to_cart {
-        font-size: 13px;
+        position: absolute;
+        top: 30%;
+        padding: 8px;
+        width: 100%;
+        background: $color__dark;
+        color: $color__bright;
+        text-align: center;
+        font-weight: 500;
+        opacity: 1;
+        transition: 0.3s;
       }
       &.outofstock {
         position: relative;
