--- a/src/assets/styles/components/_nav-layout-view.scss
+++ b/src/assets/styles/components/_nav-layout-view.scss
@@ -4,6 +4,7 @@
     display: flex;
     &__single {
       padding: 5px 20px;
+      font-weight: 500;
       &:hover {
         cursor: pointer;
       }
@@ -13,6 +14,9 @@
       &:last-of-type {
         margin-left: 15px;
       }
+      > svg {
+        margin-right: 3px;
+      }
     }
   }
 }
@@ -21,7 +25,7 @@
   > .products {
     grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)) !important;
     > li {
-      padding: 30px 30px !important;
+      padding: 10px 20px !important;
       .alg-wc-wl-thumb-btn-loop {
         left: 10px !important;
         top: 10px !important;
