--- a/src/assets/styles/templates/_about.scss
+++ b/src/assets/styles/templates/_about.scss
@@ -51,7 +51,8 @@
 .our-affiliates {
   margin-top: 70px;
   h3 {
-    margin-bottom: 20px;
+    padding: 0 1rem;
+    margin-bottom: 25px;
   }
   &__grid {
     display: grid;
