--- a/src/assets/styles/templates/_archive.scss
+++ b/src/assets/styles/templates/_archive.scss
@@ -103,8 +103,13 @@
       -moz-appearance: none; /* Firefox */
       -webkit-appearance: none; /* Safari and Chrome */
       appearance: none;
-      background: url("./../images/carret-down.svg") no-repeat right white;
-      background-position: right 30px;
+      text-align-last: center;
+      @media #{$breakpoint-sm-up} {
+        background: url("./../images/carret-down.svg") no-repeat right white;
+        background-position: right 30px;
+        padding: 0px 25px;
+        text-align-last: auto;
+      }
     }
   }
 }
@@ -129,6 +134,7 @@
       grid-template-columns: 1fr 1.8fr;
       padding: 25px 1rem;
       align-items: center;
+      column-gap: 15px;
       &:last-of-type {
         border-right: none;
       }
@@ -209,6 +215,11 @@
       &:hover {
         background-color: $color__footerBg;
       }
+      &.remove-add-to-bag {
+        .button {
+          display: none !important;
+        }
+      }
       > a {
         display: block;
         &:hover {
@@ -231,6 +242,7 @@
         font-size: 14px;
         margin-bottom: 45px;
         margin-top: 14px;
+        text-align: center;
       }
       .woocommerce-Price-amount.amount {
         font-size: 14px;
@@ -256,6 +268,7 @@
           width: 100%;
           height: 100%;
           background-image: url("./../images/spinning.gif");
+          background-size: 50%;
           z-index: 5;
           position: absolute;
           background-color: rgba($color__bright, 0.6);
@@ -401,6 +414,7 @@
         font-size: 14px;
         margin-bottom: 45px;
         margin-top: 14px;
+        text-align: center;
       }
       .woocommerce-Price-amount.amount {
         font-size: 14px;
@@ -442,6 +456,7 @@
           width: 100%;
           height: 100%;
           background-image: url("./../images/spinning.gif");
+          background-size: 50%;
           z-index: 5;
           position: absolute;
           background-color: rgba($color__bright, 0.6);
@@ -546,6 +561,7 @@
   align-items: center;
   font-size: 16px;
   font-weight: 500;
+  padding: 0px 15px;
   span {
     margin-left: 20px;
     position: relative;
