--- a/src/assets/styles/templates/_archive.scss
+++ b/src/assets/styles/templates/_archive.scss
@@ -197,7 +197,7 @@
   }
   .products {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(235px, 1fr));
     border-top: 2px solid $color__dark;
     > li {
       border: 2px solid $color__dark;
@@ -375,7 +375,7 @@
   }
   .products {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(235px, 1fr));
     border-top: 2px solid $color__dark;
     > li {
       border: 2px solid $color__dark;
@@ -579,7 +579,7 @@
   }
   .fd-teams-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(235px, 1fr));
     border-top: 2px solid $color__dark;
     > li {
       border: 2px solid $color__dark;
@@ -596,6 +596,9 @@
       &:hover {
         background-color: $color__footerBg;
       }
+      img{
+        width: 110px;
+      }
     }
   }
 }
@@ -609,7 +612,7 @@
   }
   .fd-tags__grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(235px, 1fr));
     border-top: 2px solid $color__dark;
     > li {
       border: 2px solid $color__dark;
