--- a/src/assets/styles/_main.scss
+++ b/src/assets/styles/_main.scss
@@ -24,6 +24,7 @@
 @import "components/wishList";
 @import "components/nav-filter";
 @import "components/nav-layout-view";
+@import "components/rewards";
 
 // Templates
 @import "templates/archive";
